--- a/gameJS-main/style.css
+++ b/gameJS-main/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #000; /* Fundo preto */
+    background: linear-gradient(#1354A5 0%, #041832 33.33%, #041832 66.67%, #01080E 100%);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -14,40 +14,118 @@ body {
 }
 
 
+body::before {
+    background-image: url("img/code.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0.4;
+}
 
 .container {
     width: 1200px;
-    height: auto;
+    height: 600px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     border-radius: 24px;
     border: 1px solid #1875E8;
     box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
-    background-color: transparent;
+    background-image: url("img/Ruido.png");
+    background-size: 100% 100%;
     position: relative;
-    text-align: center;
-    padding: 40px;
 }
 
 .container__conteudo {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+}
+
+.container__informacoes {
+    flex: 1;
+    padding: 20px;
+}
+
+.container__botao {
+    border-radius: 16px;
+    background: #1875E8;
+    padding: 16px 24px;
+    width: 100%;
+    font-size: 24px;
+    font-weight: 700;
+    border: none;
+    margin-top: 16px;
+}
+
+.container__texto {
+    margin: 16px 0 16px 0;
+}
+
+.container__texto-azul {
+    color: #1875E8;
+}
+
+h1 {
+    font-family: 'Chakra Petch', sans-serif;
+    font-size: 72px;
+}
+
+h2,
+p,
+button {
+    font-family: 'Inter', sans-serif;
+}
+
+h2 {
+    font-size: 32px;
+    font-weight: 400;
+}
+
+@media (max-width: 768px) {
+    
+    .container {
+        width: 90%; 
+        height: auto; 
+        flex-direction: column; 
+        justify-content: flex-start;
+        padding: 20px;
+        margin: 20px 0;
+    }
+
+    
+    .container__conteudo {
+        position: static;
         flex-direction: column;
         align-items: center;
         width: 100%;
     }
 
+    
     .container__informacoes {
         padding: 0;
-        text-align: center;
+        text-align: center; 
     }
 
+    
     h1 {
-        font-size: 48px;
-    }
+        font-size: 48px; 
 
     h2 {
-        font-size: 24px;
+        font-size: 24px; 
     }
+
+    
+    body::before {
+        opacity: 0.2; 
+        background-size: 80% auto;
+    }
+}
 
 
 @media (max-width: 480px) {
